src/test/run-pass/nil-decl-in-native.rs
// Issue #901
#[nolink]
native mod libc {
    fn printf(x: ());
}
fn main() { }