src/test/compile-fail/empty-linkname2.rs
// error-pattern:empty #[link_name] not allowed; use #[nolink].
// Issue #1326

#[link_name = ""]
#[nolink]
native mod foo {
}
